2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix JPEG-2000 mime-types and magic to
	follow the RFC (Closes: #11942)
	* tests/list: s,image/jpeg2000,image/jp2

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.vlc as a pattern for m3u files,
	as used by VideoLAN (Closes: #12114)

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Sebastien Bacher
	<seb128@debian.org> to add more aliases for Powerpoint and Word
	mime-types (Closes: #12231)

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the audio/x-m4b mime-type,
	as a sub-class of audio/mp4 (Closes: #10830)

2007-08-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the JPEG2000 JPC glob to the
	list, as well as magic for both JP2 and JPC files

	* tests/list:
	* tests/test.jp2:
	* tests/test.jpc: Add tests for the above

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/sdp, with information from
	http://www.rfc-editor.org/rfc/rfc2327.txt
	* tests/*: Add an SDP stream description, the filename clashes with
	StarOffice presentations

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Split out *.nsc into its own mime-type, as
	we'd like GStreamer to handle it directly, rather than us
	Confusing mime-type name from
	http://en.wikipedia.org/wiki/Windows_Media_Station
	* tests/*: Add an ASX playlist and an NSC stream description

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Check for xmllint

	* Makefile.am: run test-mime-data from xdgmime if we're running in CVS
	and have xdgmime checked out and built in the parent
	* tests/*: add loads of test data and a test list from Matthias Clasen
	<mclasen@redhat.com> (Closes: #5210)

	* freedesktop.org.xml.in:
	- Remove "Microsoft Word 6.0 Document" matchlet at offset 2080, it's a
	localised string (ie. says "Dokument" in German, etc.)