@@ -52,3 +52,5 @@ text-utf8.txt text/plain ox
 text.pdf application/pdf
 project.glade application/x-glade
 text.ps application/postscript
+test.cs text/x-csharp ox
+test.vala text/x-vala ox
